Fix reflow when text overflows

--- a/assets/css/splash.scss
+++ b/assets/css/splash.scss
@@ -73,11 +73,14 @@
     width: 0.125rem;
     height: 1.1em;
     animation: cursor 1s infinite step-start;
-    margin-left: -1rem;
     transform: translateY(0.2rem);
 }
 
 @keyframes cursor {
     from, to {opacity: 0;}
     50% {opacity: 1;}
+}
+
+#splash-line1-hidden, #splash-line2-hidden {
+    opacity: 0;
 }
